--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Consulta-Car</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="bg-fofofo border-bottom border-dark">
@@ -21,7 +24,7 @@
                         <li><a class="dropdown-item" href="paginas/leyes.html">Codigo y Leyes de transito.</a></li>
                     </ul>
                 </div>
-                <a class="navbar-brand border border-dark rounded-pill boton" href="index.html">Consulta-Car <img class="logo" src="img/servicio-de-auto.png" alt=""></a>     
+                <a class="navbar-brand border border-dark rounded-pill boton" href="index.html">CONSULTACAR <img class="logo" src="img/servicio-de-auto.png" alt=""></a>     
             </div>
         </nav>
     </header>
@@ -34,23 +37,23 @@
         <div class="container acceso-rapido">
             <div class="row">
                 <div class="col-md-4 alinear">
-                    <a class="boton rounded-pill" href="http://">Consulta tu patente</a>
+                    <a class="boton rounded-pill" href="paginas/info-patentes.html">Consulta tu patente</a>
                 </div>
                 <div class="col-md-4 alinear">
-                    <a class="boton rounded-pill" href="http://">Documentacion obligatoria</a>
+                    <a class="boton rounded-pill" href="paginas/documentacion-obligatoria.html">Documentacion obligatoria</a>
                 </div>
                 <div class="col-md-4 alinear" >
-                    <a class="boton rounded-pill" href="http://">Categorias de licencia</a>
+                    <a class="boton rounded-pill" href="https://www.argentina.gob.ar/seguridadvial/licencianacional/clasesysubclases" target="_blank" >Categorias de licencia</a>
                 </div>
             </div>
         </div>
         <div class="container acceso-rapido">
             <div class="row">
                 <div class="col-md-6 alinear">
-                    <a class="boton rounded-pill" href="http://">Conductor Prudente</a>
+                    <a class="boton rounded-pill" href="paginas/conducir-mejor.html">Conductor Prudente</a>
                 </div>
                 <div class="col-md-6 alinear">
-                    <a class="boton rounded-pill" href="http://">Leyes</a>
+                    <a class="boton rounded-pill" href="paginas/leyes.html">Leyes</a>
                 </div>
                 
             </div>
@@ -70,13 +73,13 @@
                 <div class="col-3 redes justify-content-center">
                     <ul>
                     <li>
-                        <a href="https://www.instagram.com/"> <img src="img/001-instagram.png" alt=""> </a>
+                        <a href="https://www.instagram.com/" target="_blank"> <img src="img/001-instagram.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/"> <img src="img/002-facebook.png" alt=""> </a>
+                        <a href="https://www.facebook.com/" target="_blank"> <img src="img/002-facebook.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/?lang=es"> <img src="img/003-twit.png" alt=""> </a>
+                        <a href="https://twitter.com/?lang=es" target="_blank"> <img src="img/003-twit.png" alt=""> </a>
                     </li>
                     </ul>
                 </div>
