--- a/paginas/info-patentes.html
+++ b/paginas/info-patentes.html
@@ -21,13 +21,11 @@
                         <li><a class="dropdown-item" href="../paginas/leyes.html">Codigo y Leyes de transito.</a></li>
                     </ul>
                 </div>
-                <a class="navbar-brand border border-dark rounded-pill boton" href="../index.html">Consulta-Car <img class="logo" src="../img/servicio-de-auto.png" alt=""></a>     
+                <a class="navbar-brand border border-dark rounded-pill boton" href="../index.html">CONSULTACAR <img class="logo" src="../img/servicio-de-auto.png" alt=""></a>     
             </div>
         </nav>
     </header>
-    
-
-    <section class="galeria container">
+    <main class="galeria container">
         <h1 class="titulo">INFORMATE SOBRE ALGUNA PATENTE.</h1>
             <div class="container row justify-content-arround">
                 <div class="imagen col-md-4">
@@ -70,12 +68,7 @@
                 </div>
             </div>
         </div>
-
-    </section>
-
-
-
-
+    </main>
     <footer class="container-fluid bg-fofofo " >
         <div class="container">
             <div class="row justify-content-evenly">
@@ -87,18 +80,18 @@
                 <div class="col-3 redes justify-content-center">
                     <ul>
                     <li>
-                        <a href="https://www.instagram.com/"> <img src="../img/001-instagram.png" alt=""> </a>
+                        <a href="https://www.instagram.com/" target="_blank"> <img src="../img/001-instagram.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/"> <img src="../img/002-facebook.png" alt=""> </a>
+                        <a href="https://www.facebook.com/" target="_blank"> <img src="../img/002-facebook.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/?lang=es"> <img src="../img/003-twit.png" alt=""> </a>
+                        <a href="https://twitter.com/?lang=es" target="_blank"> <img src="../img/003-twit.png" alt=""> </a>
                     </li>
-                </ul>
-            </div>
-        </div>    
-    </div>
+                    </ul>
+                </div>
+            </div>    
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
