--- a/paginas/conducir-mejor.html
+++ b/paginas/conducir-mejor.html
@@ -21,18 +21,36 @@
                         <li><a class="dropdown-item" href="../paginas/leyes.html">Codigo y Leyes de transito.</a></li>
                     </ul>
                 </div>
-                <a class="navbar-brand border border-dark rounded-pill boton" href="../index.html">Consulta-Car <img class="logo" src="../img/servicio-de-auto.png" alt=""></a>     
+                <a class="navbar-brand border border-dark rounded-pill boton" href="../index.html">CONSULTACAR <img class="logo" src="../img/servicio-de-auto.png" alt=""></a>     
             </div>
         </nav>
     </header>
-        
 
-    <h1 style="padding: 80px;">CONDUCIR MEJOR</h1>
+    <main>
 
+        <section class="container">
+            <h3 class="titulo">SEA UN CONDUCTOR PRUDENTE</h3>
+            <section id="grilla">
+                <div id="video1" class="grid-item centrar-video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/WVwGrD3J9QM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div id="video2" class="grid-item centrar-video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/jB-xDvBQuL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div id="video3" class="grid-item centrar-video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ZqEtW9S0AzE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div id="video4" class="grid-item centrar-video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HPq2NTLTL94" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div id="video5" class="grid-item centrar-video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ApDIXSgKiUw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </section>
+        </section>
 
-
-
-
+    </main>
+    
     <footer class="container-fluid bg-fofofo " >
         <div class="container">
             <div class="row justify-content-evenly">
@@ -44,19 +62,19 @@
                 <div class="col-3 redes justify-content-center">
                     <ul>
                     <li>
-                        <a href="https://www.instagram.com/"> <img src="../img/001-instagram.png" alt=""> </a>
+                        <a href="https://www.instagram.com/" target="_blank"> <img src="../img/001-instagram.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/"> <img src="../img/002-facebook.png" alt=""> </a>
+                        <a href="https://www.facebook.com/" target="_blank"> <img src="../img/002-facebook.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/?lang=es"> <img src="../img/003-twit.png" alt=""> </a>
+                        <a href="https://twitter.com/?lang=es" target="_blank"> <img src="../img/003-twit.png" alt=""> </a>
                     </li>
-                </ul>
-            </div>
-        </div>    
-    </div>
-</footer>
+                    </ul>
+                </div>
+            </div>    
+        </div>
+    </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
