--- a/paginas/documentacion-obligatoria.html
+++ b/paginas/documentacion-obligatoria.html
@@ -21,18 +21,16 @@
                         <li><a class="dropdown-item" href="../paginas/leyes.html">Codigo y Leyes de transito.</a></li>
                     </ul>
                 </div>
-                <a class="navbar-brand border border-dark rounded-pill boton" href="../index.html">Consulta-Car <img class="logo" src="../img/servicio-de-auto.png" alt=""></a>     
+                <a class="navbar-brand border border-dark rounded-pill boton" href="../index.html">CONSULTACAR <img class="logo" src="../img/servicio-de-auto.png" alt=""></a>     
             </div>
         </nav>
     </header>
-    
-    <article class="container">
+    <main>
+        <article class="container">
             <h3 class="titulo" >¿SABES CUAL ES LA DOCUMENTACION OBLIGATORIA?</h3>
             <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/QceDXVoYSm8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            
-
             <ul>
                 <li>DNI.</li>
                 <li>Licencia Nacional de Conducir.</li>
@@ -42,12 +40,11 @@
                 <li>Constancia RTO (Revisión Técnica Obligatoria) o VTV (Verificación Técnica Vehicular).</li>
                 <li>Patentes legibles, normalizadas y sin aditamentos.</li>
             </ul>
-
                 <p>
                 Para viajar seguros en familia, en el auto debe haber la misma cantidad de cinturones de seguridad que ocupantes. Si son menores, no olvidemos sujetarlos a la sillita que corresponda según la edad o el peso que tengan. También debe haber un matafuego de 1 kg, espejos retrovisores en ambos lados y balizas portátiles por si debemos parar en la ruta por algún imprevisto.
                 </p>
-    </article>            
-
+        </article> 
+    </main>
     <footer class="container-fluid bg-fofofo " >
         <div class="container">
             <div class="row justify-content-evenly">
@@ -59,18 +56,18 @@
                 <div class="col-3 redes justify-content-center">
                     <ul>
                     <li>
-                        <a href="https://www.instagram.com/"> <img src="../img/001-instagram.png" alt=""> </a>
+                        <a href="https://www.instagram.com/" target="_blank"> <img src="../img/001-instagram.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/"> <img src="../img/002-facebook.png" alt=""> </a>
+                        <a href="https://www.facebook.com/" target="_blank"> <img src="../img/002-facebook.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/?lang=es"> <img src="../img/003-twit.png" alt=""> </a>
+                        <a href="https://twitter.com/?lang=es" target="_blank"> <img src="../img/003-twit.png" alt=""> </a>
                     </li>
-                </ul>
-            </div>
-        </div>    
-    </div>
+                    </ul>
+                </div>
+            </div>    
+        </div>
     </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
